--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: w95;
-    src: url(/font/W95FA/w95fa.woff);
+    src: url(/public/font/W95FA/w95fa.woff);
 }
 
 html, body {
@@ -12,7 +12,9 @@ html, body {
 }
 
 body {
-    background-color:#64c6ff;
+    background-image:linear-gradient(to bottom, #048383, #fdffff);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /*-----------------------------Navigation---------------------------*/
@@ -196,9 +198,10 @@ nav {
 }
 
 main {
-    height:100%;
+    height:auto;
+    contain: content;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 h1 {
@@ -217,12 +220,142 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: auto;
     font-family:w95, sans-serif;
 }
-/*----- Page Transition ------ */
+/*----- GRID CARD STYLE ------ */
+
+.card-container {
+    display: grid;
+    margin: 50px 20px 50px 20px;
+    max-width: auto;
+    grid-template-columns: auto auto auto;
+    grid-auto-rows: auto auto auto;
+    background-color:#c3c3c3;
+    border-top: 10px solid #fdffff;
+    border-right: 10px solid #000000;
+    border-bottom: 10px solid #000000;
+    border-left: 10px solid #fdffff;
+}
+.card-header {
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+    padding: 3px;
+    grid-area: 1 / 1 / span 1 / span 3;
+    background-color: #010081;
+    font-family: w95, sans-serif;
+    font-size: 60px;
+    color: #fdffff;
+}
+
+.card1 {
+    grid-area: 2 / 1 / span 1 / span 1;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+}
+
+.card2 {
+    grid-area: 2 / 2 / span 1 / span 1;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+}
+/*  start row 2 / start column 1 / span 2 rows / span3 columns */
+.card3 {
+    display: flex;
+    justify-content: center;
+    grid-area: 2 / 3 / span 1 / span 1;
+    padding: 10px;
+    margin: 10px;
+}
+
+.card4 {
+    display: flex;
+    justify-content: center;
+    grid-area: 3 / 2 / span 1  / span 1;
+    margin: 5px;
+}
+
+.single-cover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.listen-btn {
+    width: 90%;
+    height: 100%;
+    background-color:#010081;
+    font-family: w95, sans-serif;
+    font-size: 20px;
+    color:#fdffff;
+    padding: 4px;
+    border-top: 3px solid #fdffff;
+    border-right: 3px solid #000000;
+    border-bottom: 3px solid #000000;
+    border-left: 3px solid #fdffff;
+}
+
+.listen-btn a {
+    text-decoration: none;
+    color:#fdffff;
+}
+
 
 @media screen and (max-width: 750px){
+
+    /*-----------CARD MOBILE------------*/
+
+    .card-container {
+        display: grid;
+        contain: content;
+        margin: 40px auto auto auto;
+        max-width: 80%;
+        grid-template-columns: auto;
+        grid-auto-rows: auto auto auto auto;
+    }
+
+    .card-header {
+        margin: 3px;
+        padding: 5px;
+        text-align: center;
+        grid-area: 1 / 1 / span 1 / span 3;
+        background-color: #010081;
+        font-family: w95, sans-serif;
+        font-size: 40px;
+        color: #fdffff;
+    }
+
+    .card1 {
+        grid-area: 2 / 1 / span 1 / span 3;
+        margin: 10px;
+        padding: 10px;
+    }
+    
+    .card2 {
+        grid-area: 3 / 1 / span 1 / span 3;
+        margin: 10px;
+        padding: 10px;
+    }
+    
+    .card3 {
+        grid-area: 4 / 1 / span 1 / span 3;
+        margin: 10px;
+        padding: 10px;
+    }
+
+    .card4 {
+        display: flex;
+        justify-content: center;
+        grid-area: 5 / 2 / span 1  / span 1;
+        margin: 5px;
+    }
 
     h1 {
         font-size: 60px;
@@ -323,6 +456,10 @@ footer {
 }
 
 @media screen and (max-width: 500px){
+
+    .card-header {
+        font-size: 25px;
+    }
     h1 {
         font-size: 40px;
         transition: .3s ease;
