--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: w95;
-    src: url(/public/font/W95FA/w95fa.woff);
+    src: url(/font/W95FA/w95fa.woff);
 }
 
 html, body {
