--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,15 @@ body {
     background-repeat:round;
 }
 
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+  }
+  
+  html.is-animating .transition-fade {
+    opacity: 0;
+  }
+
 /*-----------------------------Navigation---------------------------*/
 .nav-container {
     width: auto;
@@ -528,7 +537,9 @@ footer {
 @media screen and (max-width: 500px){
 
     /*-------------NEWS SECTION (UNDER 500px)-----------*/
-
+    .news-container {
+        width: 90%;
+    }
     .news-card {
         display: grid;
         grid-template-columns: auto;
@@ -552,9 +563,16 @@ footer {
 
     /*-----------MUSIC SECTION (UNDER 500px)-------------*/
 
+    .music-card-container {
+        width: 90%;
+    }
     .music-card-section {
         display: flex;
         justify-content: center;
+    }
+
+    h3.container-heading {
+        font-size: 25px;
     }
 
     h1 {
